--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
     <title>Pratikum CSS</title> 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Tambahkan Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+    <!-- Tambahkan Leaflet JS -->
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+
+    <style>
+        /* Style tambahan untuk map */
+        #map {
+            height: 400px;       /* bisa diganti jadi 100vh kalau mau fullscreen */
+            width: 100%;
+            display: none;       /* awalnya hidden, muncul pas tombol diklik */
+            margin-top: 10px;
+            border-radius: 8px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="judul">TOKO KARYA INDAH</h1>
+            <h2 class="judul">TOKO KARYA INDAH</h2>
             <button id="toggleBtn">Klik Disini Untuk Melihat Selengkapnya</button>
             <ul class="slogan">
                 <li class="slide active">GROSIR | ECER | SEMBAKO | ELEKTRONIK | FURNITURE</li>
@@ -18,6 +34,10 @@
             </ul>
         </div>
         <div class="banner"></div>
+
+        <!-- Tambahkan MAP di sini -->
+        <div id="map"></div>
+
         <div class="content">
             <h2>Deskripsi</h2>
             <p class="penulis">Dibuat Pada 20 September 2025</p>
