--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toko Karya Indah</title> 
+    <title>Toko Karya Indah</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
@@ -23,31 +23,24 @@
             </ul>
         </div>
 
-        <!-- Banner -->
         <div class="banner"></div>
 
         <!-- MAP -->
         <div id="map"></div>
 
-        <!-- Content -->
         <div class="content">
             <h2>Deskripsi</h2>
             <p class="penulis">Dibuat Pada 20 September 2025</p>
             <p>
-                Karya Indah adalah pusat belanja terpercaya yang menyediakan berbagai kebutuhan rumah tangga 
-                dan usaha, mulai dari sembako lengkap, produk elektronik modern, hingga pilihan furniture berkualitas.
+                Karya Indah adalah pusat belanja terpercaya yang menyediakan berbagai kebutuhan rumah tangga dan usaha,
+                mulai dari sembako lengkap, produk elektronik modern, hingga pilihan furniture berkualitas.
+            </p>
+            <p>
                 Dengan layanan grosir maupun eceran, kami hadir untuk memenuhi kebutuhan sehari-hari maupun skala besar,
                 dengan harga terjangkau, kualitas terjamin, dan pelayanan yang ramah.
             </p>
-            <p>
-                Selain menyediakan produk dengan harga bersaing, Karya Indah selalu berkomitmen menjaga kualitas 
-                setiap barang yang kami tawarkan. Kami percaya bahwa kepuasan pelanggan adalah kunci utama kesuksesan, 
-                sehingga pelayanan yang cepat, ramah, dan profesional menjadi prioritas kami. Dengan dukungan tim berpengalaman, 
-                Karya Indah siap menjadi mitra belanja yang dapat diandalkan oleh keluarga maupun pelaku usaha.
-            </p>    
         </div>
 
-        <!-- Footer -->
         <div class="footer">
             <p class="copy">Copyright &copy; 2025 Karya Indah</p>
         </div>
