--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <div class="banner"></div>
 
         <!-- MAP -->
-        <div id="map"></div>
+        <div id="map" class="fade"></div>
 
-        <div class="content">
+        <div class="content fade">
             <h2>Deskripsi</h2>
             <p class="penulis">Dibuat Pada 20 September 2025</p>
             <p>
@@ -41,7 +41,7 @@
             </p>
         </div>
 
-        <div class="footer">
+        <div class="footer fade">
             <p class="copy">Copyright &copy; 2025 Karya Indah</p>
         </div>
     </div>
