--- a/index.html
+++ b/index.html
@@ -3,49 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toko Karya Indah</title>
+    <title>Pratikum CSS</title> 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-    <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h2 class="judul">TOKO KARYA INDAH</h2>
-            <button id="toggleBtn">Klik Disini Untuk Melihat Lokasi</button>
+            <h1 class="judul">TOKO KARYA INDAH</h1>
+            <button id="toggleBtn">Klik Disini Untuk Melihat Selengkapnya</button>
             <ul class="slogan">
                 <li class="slide active">GROSIR | ECER | SEMBAKO | ELEKTRONIK | FURNITURE</li>
                 <li class="slide">ABOUT KARYA INDAH</li>
             </ul>
         </div>
-
         <div class="banner"></div>
-
-        <!-- MAP -->
-        <div id="map" class="fade"></div>
-
-        <div class="content fade">
+        <div class="content">
             <h2>Deskripsi</h2>
             <p class="penulis">Dibuat Pada 20 September 2025</p>
-            <p>
-                Karya Indah adalah pusat belanja terpercaya yang menyediakan berbagai kebutuhan rumah tangga dan usaha,
-                mulai dari sembako lengkap, produk elektronik modern, hingga pilihan furniture berkualitas.
-            </p>
-            <p>
-                Dengan layanan grosir maupun eceran, kami hadir untuk memenuhi kebutuhan sehari-hari maupun skala besar,
-                dengan harga terjangkau, kualitas terjamin, dan pelayanan yang ramah.
-            </p>
+            <p>Karya Indah adalah pusat belanja terpercaya yang menyediakan berbagai kebutuhan rumah tangga dan usaha, mulai dari sembako lengkap, produk elektronik modern, hingga pilihan furniture berkualitas.
+               Dengan layanan grosir maupun eceran, kami hadir untuk memenuhi kebutuhan sehari-hari maupun skala besar, dengan harga terjangkau, kualitas terjamin, dan pelayanan yang ramah.</p>
+            <p>Selain menyediakan produk dengan harga bersaing, Karya Indah selalu berkomitmen menjaga kualitas setiap barang yang kami tawarkan. Kami percaya bahwa kepuasan pelanggan adalah kunci utama kesuksesan, sehingga pelayanan yang cepat, ramah, dan profesional menjadi prioritas kami. Dengan dukungan tim berpengalaman, Karya Indah siap menjadi mitra belanja yang dapat diandalkan oleh keluarga maupun pelaku usaha.</p>    
         </div>
-
-        <div class="footer fade">
+        <div class="footer">
             <p class="copy">Copyright &copy; 2025 Karya Indah</p>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
