--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
             <button id="toggleBtn">Klik Disini Untuk Melihat Selengkapnya</button>
             <ul class="slogan">
                 <li class="slide active">GROSIR | ECER | SEMBAKO | ELEKTRONIK | FURNITURE</li>
-                <li class="slide">ABOUT KARYA INDAH</li>
+                <li class="slide">CREW : SIDIQ | MADAN | VEMAS | RIZAL | WIWIN | PIPIT | LIA </li>
             </ul>
         </div>
         <div class="banner"></div>
         <div class="content">
             <h2>Deskripsi</h2>
-            <p class="penulis">Dibuat Pada 20 September 2025</p>
+            <p class="penulis">APA ITU KARYA INDAH??!</p>
             <p>Karya Indah adalah pusat belanja terpercaya yang menyediakan berbagai kebutuhan rumah tangga dan usaha, mulai dari sembako lengkap, produk elektronik modern, hingga pilihan furniture berkualitas.
                Dengan layanan grosir maupun eceran, kami hadir untuk memenuhi kebutuhan sehari-hari maupun skala besar, dengan harga terjangkau, kualitas terjamin, dan pelayanan yang ramah.</p>
             <p>Selain menyediakan produk dengan harga bersaing, Karya Indah selalu berkomitmen menjaga kualitas setiap barang yang kami tawarkan. Kami percaya bahwa kepuasan pelanggan adalah kunci utama kesuksesan, sehingga pelayanan yang cepat, ramah, dan profesional menjadi prioritas kami. Dengan dukungan tim berpengalaman, Karya Indah siap menjadi mitra belanja yang dapat diandalkan oleh keluarga maupun pelaku usaha.</p>    
         </div>
         <div class="footer">
             <p class="copy">Copyright &copy; 2025 Karya Indah</p>
+            <p class="extra-text">ABOUT KARYA INDAH ^_^</p>
         </div>
     </div>
     <script src="script.js"></script>
